2007-03-07  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: check whether a class implements all
	  abstract methods of base classes
	* vala/valacodenode.vala, vala/valadatatype.vala,
	  vala/valaexpression.vala, vala/valaliteral.vala: fix build with added
	  checks

2007-03-07  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala: implement get_type_parameter_index

2007-03-07  Raffaele Sandrini  <rasa@gmx.ch>

	* vala/valasemanticanalyzer.vala: check whether a class implements all
	  methods required by its super interfaces

2007-03-05  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l, vala/parser.y, vala/valacatchclause.vala,
	  vala/valathrowstatement.vala, vala/valatrystatement.vala,
	  vala/valacodevisitor.vala: add exception handling support to the
	  parser
	* vala/vala.h, vala/Makefile.am: update

2007-03-05  Raffaele Sandrini  <rasa@gmx.ch>

	* vala/valainterfaceregisterfunction.vala: add
	  `g_type_interface_add_prerequisite' calls during interface type
	  creation
	* vala/valasemanticanalyzer.vala: add checks for consistent interface
	  prerequisites and whether classes are obeying them

2007-03-04  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2007-03-04  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.0.7 release

2007-03-04  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: pack all embedded stataments in blocks
	* vala/vala.h: update

2007-03-04  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: check for inherited properties in
	  construct formal parameters

2007-03-04  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: don't allow interface implementations
	  to specify override
	* vala/valaconstant.vala, vala/valafield.vala,
	  vala/valaformalparameter.vala, vala/valamethod.vala,
	  vala/valaproperty.vala, vala/valasignal.vala,
	  vala/valavariabledeclarator.vala: remove override from interface
	  implementations

2007-03-04  Jürg Billeter  <j@bitron.ch>
