@@ -31,18 +31,14 @@ public class Vala.CreationMethod : Method {
 	 */
 	public int n_construction_params { get; set; }
 	
-	private string cname;
-	
 	/**
 	 * Creates a new method.
 	 *
-	 * @param name        method name
-	 * @param source      reference to source code
-	 * @return            newly created method
+	 * @param name             method name
+	 * @param source_reference reference to source code
+	 * @return                 newly created method
 	 */
-	public CreationMethod (string _name, SourceReference source = null) {
-		name = _name;
-		source_reference = source;
+	public CreationMethod (construct string name, construct SourceReference source_reference = null) {
 	}
 
 	public override void accept (CodeVisitor! visitor) {
@@ -58,23 +54,14 @@ public class Vala.CreationMethod : Method {
 
 		visitor.visit_end_creation_method (this);
 	}
-	
-	/**
-	 * Returns the interface name of this method as it is used in C code.
-	 *
-	 * @return the name to be used in C code
-	 */
-	public override string! get_cname () {
-		if (cname == null) {
-			var parent = symbol.parent_symbol.node;
-			if (parent is DataType) {
-				if (name == null) {
-					cname = "%snew".printf (((DataType) parent).get_lower_case_cprefix ());
-				} else {
-					cname = "%snew_%s".printf (((DataType) parent).get_lower_case_cprefix (), name);
-				}
-			}
+
+	public override ref string! get_default_cname () {
+		var parent = symbol.parent_symbol.node;
+		assert (parent is DataType);
+		if (name == null) {
+			return "%snew".printf (((DataType) parent).get_lower_case_cprefix ());
+		} else {
+			return "%snew_%s".printf (((DataType) parent).get_lower_case_cprefix (), name);
 		}
-		return cname;
 	}
 }
